changes on single line diagram
Signed-off-by: Sophie Frasnedo <sophie.frasnedo@rte-france.com>